# fzlib

./: .gitignore  CMakeLists.txt  README.org  hola2.txt
lib/: CMakeLists.txt  forgz.f90
prog/: CMakeLists.txt  main.f90
